<package>
  <name>humanoid_msgs</name>
  <version>0.1.3</version>
  <description>
    Messages and services for humanoid robots
  </description>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/humanoid_msgs</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>

</package>
